added rational numbers class and test for them

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
 
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)  
+
 project(app)
 
 add_executable(app
@@ -10,10 +13,16 @@ add_subdirectory(
 	lp_methods
 )
 
-target_include_directories(app
-	PRIVATE ./lp_methods
+add_subdirectory(
+	rational_numbers
 )
 
-target_link_libraries(app
-	PRIVATE lp_methods
+target_include_directories(app PRIVATE 
+	./lp_methods
+	./rational_numbers
+)
+
+target_link_libraries(app PRIVATE 
+	lp_methods
+	rational_numbers
 )
