added readTable and c/r zeroing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,10 @@ cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)  
 
-project(app)
+project(LinearProgrammingAlgs)
 
-add_executable(app
-	main.cpp
+add_subdirectory(
+	application
 )
 
 add_subdirectory(
@@ -23,16 +23,4 @@ add_subdirectory(
 
 add_subdirectory(
 	table
-)
-
-target_include_directories(app PRIVATE 
-	./lp_algs
-	./rational_numbers
-	./lp_methods
-)
-
-target_link_libraries(app PRIVATE 
-	lp_algs
-	rational_numbers
-	lp_methods
 )
