--- a/table/CMakeLists.txt
+++ b/table/CMakeLists.txt
@@ -6,12 +6,10 @@ add_library(table
 	table.cpp
 	table.hpp
 )
-
 target_include_directories(table PRIVATE 
 	./
 	./../rational_numbers
 )
-
 target_link_libraries(table PRIVATE
 	rational_numbers
 )
@@ -19,13 +17,13 @@ target_link_libraries(table PRIVATE
 add_executable(table_test 
 	main.cpp
 )	
-
 target_include_directories(table_test PRIVATE 
 	./
 	./../rational_numbers
 )
-
 target_link_libraries(table_test PRIVATE 
 	table
 	rational_numbers
 )
+
+configure_file(${CMAKE_SOURCE_DIR}/resources/test.txt ${CMAKE_CURRENT_BINARY_DIR}/test.txt COPYONLY)
