changed graph to perfomance_colletion

--- a/perfomance_collection/CMakeLists.txt
+++ b/perfomance_collection/CMakeLists.txt
@@ -1,33 +1,33 @@
 cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
 
-project(graph)
+project(perfomance_collection)
 
-add_library(graph
-	graph.cpp
-	graph.hpp
+add_library(perfomance_collection
+	perf.cpp
+	perf.hpp
 )
-target_include_directories(graph PRIVATE 
+target_include_directories(perfomance_collection PRIVATE 
 	./
 	./../table
 	./../rational_numbers
 	./../lp_algs
 )
-target_link_libraries(graph PRIVATE
+target_link_libraries(perfomance_collection PRIVATE
 	rational_numbers
 	lp_algs
 	table
 )
 
-add_executable(graph_app 
+add_executable(perfomance_collector 
 	main.cpp
 )	
-target_include_directories(graph_app PRIVATE 
+target_include_directories(perfomance_collector PRIVATE 
 	./
 	./../rational_numbers
 	./../table
 	./../lp_algs
 )
-target_link_libraries(graph_app PRIVATE 
+target_link_libraries(perfomance_collector PRIVATE 
 	rational_numbers
 	lp_algs
 	table
