--- a/lp_algs/CMakeLists.txt
+++ b/lp_algs/CMakeLists.txt
@@ -2,16 +2,19 @@ cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
 
 project(lp_algs)
 
+set(SRC 
+	./source/lp_algs.cpp
+)
+
+set(HEADERS 
+	./include/lp_algs.hpp
+)
+
 add_library(lp_algs
-	lp_algs.cpp
-	lp_algs.hpp
+	${SRC}
+	${HEADERS}
 )
-target_include_directories(lp_algs PRIVATE 
-	./
-	./../rational_numbers
-	./../table
-)
+
 target_link_libraries(lp_algs PRIVATE
-	rational_numbers
 	table
 )
