--- a/table/CMakeLists.txt
+++ b/table/CMakeLists.txt
@@ -2,28 +2,19 @@ cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
 
 project(table)
 
+set(SRC 
+	./source/table.cpp
+)
+
+set(HEADERS 
+	./include/table.hpp
+)
+
 add_library(table
-	table.cpp
-	table.hpp
+	${SRC}
+	${HEADERS}
 )
-target_include_directories(table PRIVATE 
-	./
-	./../rational_numbers
-)
+
 target_link_libraries(table PRIVATE
 	rational_numbers
 )
-
-add_executable(table_test 
-	main.cpp
-)	
-target_include_directories(table_test PRIVATE 
-	./
-	./../rational_numbers
-)
-target_link_libraries(table_test PRIVATE 
-	table
-	rational_numbers
-)
-
-configure_file(${CMAKE_SOURCE_DIR}/resources/test.txt ${CMAKE_CURRENT_BINARY_DIR}/test.txt COPYONLY)
