started implementing arbitrary size integer lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,20 @@
 cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)  
 
 project(LinearProgrammingAlgs)
 
 include_directories(
+	./external/BigInt/include
 	./rational_numbers/include
 	./table/include
 	./lp_algs/include
 	./perfomance_collection/include
+)
+
+add_subdirectory(
+	./external/BigInt
 )
 
 add_subdirectory(
