made clean lpalgs lib and made some comments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ include_directories(
 	./rational_numbers/include
 	./table/include
 	./lp_algs/include
+	./lp_algs_dev/include
 	./perfomance_collection/include
 )
 
@@ -27,6 +28,10 @@ add_subdirectory(
 
 add_subdirectory(
 	lp_algs
+)
+
+add_subdirectory(
+	lp_algs_dev
 )
 
 add_subdirectory(
