--- a/external/BigInt/CMakeLists.txt
+++ b/external/BigInt/CMakeLists.txt
@@ -2,15 +2,15 @@ cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
 
 project(BigInt)
 
-set(SRC 
-	./source/BigInt.cpp
+set(SOURCES 
+	sources/BigInt.cpp
 )
 
 set(HEADERS 
-	./include/BigInt.hpp
+	headers/BigInt.hpp
 )
 
 add_library(BigInt
-	${SRC}
+	${SOURCES}
 	${HEADERS}
 )
