--- a/lp_algs/CMakeLists.txt
+++ b/lp_algs/CMakeLists.txt
@@ -2,16 +2,16 @@ cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
 
 project(lp_algs)
 
-set(SRC 
-	./source/lp_algs.cpp
+set(SOURCES 
+	sources/lp_algs.cpp
 )
 
 set(HEADERS 
-	./include/lp_algs.hpp
+	headers/lp_algs.hpp
 )
 
 add_library(lp_algs
-	${SRC}
+	${SOURCES}
 	${HEADERS}
 )
 
