--- a/application/CMakeLists.txt
+++ b/application/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
 
 project(apps)
 
+# rational numbers test
+
 add_executable(rational_test
 	rational_test.cpp
 )
@@ -9,6 +11,8 @@ add_executable(rational_test
 target_link_libraries(rational_test PRIVATE 
 	rational_numbers
 )
+
+# table class test
 
 add_executable(table_test
 	table_test.cpp
@@ -18,6 +22,8 @@ target_link_libraries(table_test PRIVATE
 	rational_numbers
 	table
 )
+
+# app for perfomance testing
 
 add_executable(perf_app
 	perf_app.cpp
@@ -31,6 +37,8 @@ target_link_libraries(perf_app PRIVATE
 	perfomance_collector
 )
 
+# main app
+
 add_executable(lp_app
 	main.cpp
 )
@@ -41,6 +49,8 @@ target_link_libraries(lp_app PRIVATE
 	lp_algs
 	lp_algs_dev
 )
+
+# adding test files to binaries
 
 configure_file(${CMAKE_SOURCE_DIR}/resources/test.txt ${CMAKE_CURRENT_BINARY_DIR}/test.txt COPYONLY)
 file(TOUCH ${CMAKE_CURRENT_BINARY_DIR}/output.txt)
